Centered the chat page, and added pictures

--- a/meals/templates/trade/index.html
+++ b/meals/templates/trade/index.html
@@ -140,7 +140,7 @@
 <div class = "row padding">
 	<div class = "col-md-4">
 		<div class = "card">
-			<img class = "card-img-top" src = "{{url_for('static', filename='LayoCropped.jpg')}}">
+			<img class = "card-img-top" src = "{{url_for('static', filename='layomi1.jpg')}}">
 			<div class = "card-body">
 				<h4 class = "card-title">Jesulayomi Kupoluyi</h4>
 				<p class = "card-text"> Something about yourself </p>
@@ -150,7 +150,7 @@
 	</div>
 	<div class = "col-md-4">
 		<div class = "card">
-			<img class = "card-img-top" src = "{{url_for('static', filename='team1.png')}}">
+			<img class = "card-img-top" src = "{{url_for('static', filename='Andy1.jpg')}}">
 			<div class = "card-body">
 				<h4 class = "card-title">Andrew Duffield</h4>
 				<p class = "card-text"> Something about yourself  </p>
@@ -169,7 +169,7 @@
 	</div>
 	<div class = "col-md-4">
 		<div class = "card">
-			<img class = "card-img-top" src = "{{url_for('static', filename='team1.png')}}">
+			<img class = "card-img-top" src = "{{url_for('static', filename='Kareem1.jpg')}}">
 			<div class = "card-body">
 				<h4 class = "card-title">Kareem Akabashorun</h4>
 				<p class = "card-text"> Something about yourself  </p>
@@ -178,7 +178,7 @@
 	</div>
 	<div class = "col-md-4">
 		<div class = "card">
-			<img class = "card-img-top" src = "{{url_for('static', filename='team1.png')}}">
+			<img class = "card-img-top" src = "{{url_for('static', filename='Shaoyang1.jpg')}}">
 			<div class = "card-body">
 				<h4 class = "card-title">Shaoyang Wang</h4>
 				<p class = "card-text"> Something about yourself  </p>
