--- a/meals/templates/chat_room.html
+++ b/meals/templates/chat_room.html
@@ -147,7 +147,25 @@
             margin: 0 !important;
         }
     </style>
-
+<nav class = "navbar navbar-expand-md navbar-light bg-light sticky-top" style = "margin-bottom: 150px;">
+    <div class = "container-fluid">
+        <a class = "navbar-brand reframe" href = "#"><img src = "{{url_for('static', filename='blackresize.png')}}"></a>
+        <button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbarResponsive">
+            <span class = "navbar-toggler-icon"></span>
+        </button>
+        <div class = "collapse navbar-collapse" id = "navbarResponsive">
+            <ul class = "navbar-nav ml-auto">
+                <li class = "nav-item active">
+                    <a class = "nav-link" href = "{{url_for('trade.buy')}}">Home</a>
+                </li>
+                <li class = "nav-item">
+                    <a class = "nav-link" href = "{{url_for('auth.logout')}}">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<div class = "container">
 <div class="row" onload="ajax();">
     <div class="col-xs-1"></div>
     <div class="col-xs-4" style="background-color: #f5f5f5;margin: 0px 10px;border-radius: 4px; padding: 10px 20px 20px 20px;">
@@ -196,5 +214,6 @@
 
     </div>
     <div class="col-xs-1"></div>
+</div>
 </div>
 {% endblock %}
